feat: Enhance document upload functionality with PDF support
- Added PDF upload endpoint and functionality in the API.
- Implemented PDF document handling in the agent class.
- Updated documentation to include PDF upload instructions.
- Created a Streamlit interface for uploading CSV and PDF documents.
- Added comprehensive error handling for PDF processing.
- Introduced metadata support for uploaded PDFs.
- Removed outdated frontend HTML example.
- Updated example upload scripts to demonstrate PDF uploads.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 langchain
 langchain-ollama
 langchain-chroma
+langchain-community
 pandas
 fastapi
 uvicorn[standard]
 pydantic
+PyPDF2
+python-multipart
+streamlit
+requests
